# scry

./: .gitignore  Cargo.toml  README.md  SCOPE.md  manifest.toml  requirements.txt  setup.sh
crates/scry/: CHANGELOG.md  Cargo.toml
crates/scry-engine/: CHANGELOG.md  Cargo.toml
crates/scry-engine/src/: backend.rs  error.rs  lib.rs  params.rs  pipeline.rs  registry.rs  store.rs  workflow.rs  workflow_templates.rs
crates/scry-engine/src/backends/: comfyui.rs  diffusers.rs  mod.rs
crates/scry/src/: main.rs  tools.rs
python/: worker.py
