[package]
name = "scry-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Image generation pipeline engine — model registry, backend abstraction, parameter management"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

walkdir = "2"
safetensors = "0.5"
reqwest = { version = "0.12", features = ["json"] }
