[package]
name = "scry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Omegon extension for agentic local image generation"

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
scry-engine = { path = "../scry-engine" }

omegon-extension.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
base64.workspace = true
